syntax = "proto3";

package todo;

option java_multiple_files = true;
option java_package = "com.example.proto.todo";
option java_outer_classname = "TodoProtos";

message Empty {

}

message TodoId {
  int64 id = 1;
}

message Todo {
  int64 id = 1;
  string title = 2;
  bool checked = 3;
}

message CreateTodoRequest {
  string title = 1;
}

message ReadTodosResponse {
  repeated Todo Todos = 1;
}

service TodoService {
  rpc createTodo(CreateTodoRequest) returns (TodoId);
  rpc readTodo(TodoId) returns (Todo);
  rpc updateTodo(Todo) returns (TodoId);
  rpc deleteTodo(TodoId) returns (TodoId);
  rpc readTodos(Empty) returns (ReadTodosResponse);
}